grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      volumes:
        # PersistentVolumeClaim을 통해 NFS를 사용하여 데이터 저장
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-pvc
      containers:
        - name: grafana
          image: doitcomet/grafana:v5.0
          ports:
            - name: grafana
              containerPort: 3000
          volumeMounts:
            # PersistentVolumeClaim으로 마운트된 디렉터리에 저장
            - mountPath: /var/lib/grafana
              name: grafana-storage
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '3000'
spec:
  selector:
    app: grafana
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30004
