allow-prometheus-to-node-exporter.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-node-exporter
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      k8s-app: node-exporter
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
    ports:
    - protocol: TCP
      port: 9100
